# chem-env

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  modal.yml  pr.yml  test.yml
src/chemenv/: _version.py  cli.py  deploy.py  modal.py  modal_app.py
src/chemenv/tools/: cheminformatics.py
src/chemenv/tools/cheminformatics/: periodic_table.py
tests/: conftest.py  test_cheminf.py  test_modal.py
tests/cheminformatics/: periodic_table.py
tests/tools/: test_cheminformatics.py
tools/: deploy.py
tools/cheminf/: cheminf.py
tools/cheminformatics/: modal.py
