[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "chem-env"
description = "A package for chemical informatics tools"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "ChemEnv authors"}]
dependencies = ["modal", "rdkit", "mendeleev", "fire"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff", "pytest-asyncio"]

[project.scripts]
chemenv = "chemenv.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: mark test as async"]
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "src/chemenv/_version.py"
