[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chem-env"
version = "0.1.0"
description = "A package for chemical informatics tools"
authors = ["ChemEnv authors"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "chemenv", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
modal = "*"
rdkit = "*"
mendeleev = "*"
fire = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
ruff = "*"
pytest-asyncio = "*"

[tool.poetry.scripts]
chemenv = "chemenv.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: mark test as async"]
testpaths = ["tests"]
