[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chem-env"
description = "A package for chemical informatics tools"
authors = [{name = "ChemEnv authors"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = ["modal", "rdkit", "mendeleev", "fire"]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff", "pytest-asyncio"]

[project.scripts]
chemenv = "chemenv.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: mark test as async"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/chemenv/_version.py"
